--- a/pre-recorded/module_19/first_project/student/templates/student/index.html
+++ b/pre-recorded/module_19/first_project/student/templates/student/index.html
@@ -26,19 +26,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'student_profile' %}">Profile</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="/admin">Admin</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -50,8 +39,8 @@
       </nav>
     
       
-      <h1>Name: {{ name }}</h1>
-    <h2>Age: {{ age }}</h2>
+    <h1>Name: {{ context.name }}</h1>
+    <h2>Age: {{ context.age }}</h2>
     {% if age > 25 %}
     <p>May you be eligible for a driver's license</p>
     {% elif age > 20 %}
@@ -92,6 +81,34 @@
       </tr>
       {% endfor %}
     </table>
+
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Roll</th>
+          <th>Father Name</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for student in student_data %}
+          <tr>
+            <th>{{ student.id }}</th>
+            <th>{{ student.name }}</th>
+            <th>{{ student.roll }}</th>
+            <th>{{ student.father_name }}</th>
+            <th>
+              <a class="btn btn-danger btn-sm" href="{% url 'delete_student' student.id %}">Delete</a>
+            </th>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
