add mysql database

--- a/pre-recorded/module_21/student_management/student/templates/student/auto_form.html
+++ b/pre-recorded/module_21/student_management/student/templates/student/auto_form.html
@@ -6,7 +6,7 @@
     {% if login %}
         <h2>Login Form</h2>
     {% else %}
-        <h2>Registration Form</h2>
+        <h2>Sign Up Form</h2>
     {% endif %}
     <form method="post">
         {% csrf_token %}
