complete todo project

--- a/live/module_23/toDoApp/templates/todoapp/register.html
+++ b/live/module_23/toDoApp/templates/todoapp/register.html
@@ -72,7 +72,7 @@
 
             <!-- Login Link -->
             <p class="text-center text-gray-500 text-sm mt-4">
-                Already have an account? <a href="{% url "home" %}" class="text-blue-500 hover:underline">Login</a>
+                Already have an account? <a href="{% url "login" %}" class="text-blue-500 hover:underline">Login</a>
             </p>
         </form>
     </div>
