--- a/live/module_23/toDoApp/templates/todoapp/base.html
+++ b/live/module_23/toDoApp/templates/todoapp/base.html
@@ -6,9 +6,9 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <title>{% block title %}To Do{% endblock title %}</title>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-200">
 
-    <nav class="bg-white shadow-lg rounded-lg">
+    <nav class="bg-white shadow-lg rounded-lg mb-8">
         <div class="mx-auto px-12">
             <div class="flex justify-between items-center h-[55px]">
                 <div>
@@ -20,10 +20,13 @@
             </div>
         </div>
     </nav>
+
+    <div class="container mx-auto">
+
+        {% block content %} {% endblock content %}
+
+    </div>
     
-    {% block content %}
-      
-    {% endblock content %}
 
 </body>
 </html>
